# rdk-mocahal

./: CONTRIBUTING.md  Makefile.am  configure.ac
hal_headers/include/: rdk_moca_hal.h  rdk_moca_hal_soc.h  rdk_moca_hal_types.h
hal_tools/: Makefile.am  README  configure.ac
hal_tools/src/: Makefile.am  rdk_moca_hal.c
hal_tools/src/librdkmocahal/: Makefile.am  librdkmocahal_generic.c
hal_tools/src/librdkmocahalsoc_stubs/: Makefile.am  librdkmocahalsoc_stubs.c
hal_tools/src/rmh/: Makefile.am  rmh.c
include/: moca_hal.h  rdk_moca_hal.h
legacy_build/: build.sh  rdk_build.sh  rdk_env.xml
rmh_app/: Makefile.am  rmh_app.c  rmh_app.h  rmh_app_api_handlers.c
rmh_apps/rmh/: Makefile.am  rmh_app.h  rmh_app_api_handlers.c
rmh_apps/rmh_monitor/: Makefile.am  rmh_monitor.c  rmh_monitor.h  rmh_monitor_events.c  rmh_monitor_print.c  rmh_monitor_util.c
rmh_interface/: Makefile.am  rdk_moca_hal.h  rmh_api.h  rmh_type.h
rmh_interface/html_documentation/: rmh_generate_html_apis.h  rmh_generate_html_doc.sh  rmh_generate_html_toc.h
rmh_interface/soc_header/: rmh_generate_soc_header.c  rmh_soc_header.h
rmh_lib/: Makefile.am  librmh.h  librmh_api_no_wrap.c  librmh_api_wrap_generic_only.c  librmh_api_wrap_soc_and_generic.c  librmh_globals.c  librmh_wrap.c  librmh_wrap.h
rmh_scripts/: moca-status.service  moca_status.service
src/: Makefile.am  moca_hal.c
test/: Makefile.am  testmocahal.c
